Још надимака, додао README.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     }
     
     var lulz = ["Било ми досадно", "Научи да причаш", "Не буди незналица", "Лакше је уз мене", "Пиши као што говориш"];
-    var tebr = ["матори", "брате", "легендо", "рођаче", "краљу"];
+    var tebr = ["матори", "брате", "легендо", "рођаче", "краљу", "бураз", "царе", "куме", "сине", "ортак", "црњо", "курво", "течо", "баки", "друже", "кућо"];
     function posalicadoskocica() {
       return lulz[Math.floor(Math.random() * lulz.length)] + ", " + torims(tebr[Math.floor(Math.random() * tebr.length)]) + ".";
     }
